--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,8 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@sanity/client": "^7.0.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.3"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -27,6 +26,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "react-router-dom": "^7.6.0",
     "vite": "^6.3.5"
   }
 }
